# console_color-rs

./: Cargo.toml  README.md
bindings/: Cargo.toml  build.rs
examples/: simple.rs
src/: color.rs  lib.rs
src/platform/: mod.rs  unix.rs  windows.rs
