[package]
name = "console_color"
version = "0.1.0"
authors = ["Xydez <thexydez@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["impl-default", "wincon", "consoleapi", "processenv", "winnt", "winbase"] }
