[package]
name = "console_color"
version = "0.1.1"
description = "Cross platform console colors written in idiomatic Rust"
repository = "https://github.com/Xydez/console_color-rs"
authors = ["Xydez <thexydez@gmail.com>"]
edition = "2018"
license = "Unlicense"
keywords = ["console", "color"]
categories = ["command-line-interface"]

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["impl-default", "wincon", "consoleapi", "processenv", "winnt", "winbase"] }
